<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="314dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/consup"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:textSize="16sp"
            android:id="@+id/mailtome"
            android:textColor="@color/colorPrimary"
            android:text="@string/maillink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="25dp"
            android:text="@string/phlink"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/callme"
            android:textColor="@color/colorPrimary"
            android:text="@string/phno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>